# indication_scout

./: .env.constants.example  .env.constants.integration  .env.constants.tester  .env.example  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  MEMORY.md  PLAN.md  PROJECT_STATE.md  README.md  TODO.md  app.py  app_mock.py  docker-compose.yml  future.md  mock_tools.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: code-reviewer.md  docs-engineer.md  project-state-updater.md
.claude/commands/: remember.md
.claude/hooks/: context-70-alert.sh
alembic/: env.py
alembic/versions/: 74ac9560da3a_initial_tables.py  f0ccb024a181_create_pubmed_abstracts_table.py
docker/initdb/: 01_create_test_db.sql
docs/: ARCHITECTURE.md  DESIGN.md  IndicationScout_Discovery_Paths.md  agents.md  agents_details.md  agents_evolution.md  alembic.md  api_clients.md  chembl.md  claude_code_tooling.md  clinical_trials.md  clinical_trials_2.md  clinical_trials_agent.md  fda_plan.md  findings.md  literature_agent.md  llm.md  notes.md  open_targets.md  open_targets_objects.md  ot_api_changes.md  ot_query_map.md  project.md  pubmed.md  rag.md  rag_basics.md  rag_details.md  roadmap.md  sample_summary_outputs.md  validation.md
models/: evidence_ranker_v1.pkl  trial_risk_v1.metrics.json  trial_risk_v1.pkl
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_model_experiments.ipynb
scripts/: fda_api_tester.py  fetch_competitors_for_tests.py  fetch_pmids_for_tests.py  run_evaluation.py  seed_db.py  session.py  truncate_db.py
skills/: testing.md
src/indication_scout/: __init__.py  config.py  constants.py  markers.py
src/indication_scout/agents/: __init__.py  _trial_formatting.py  base.py  clinical_trials.py  clinical_trials_tools.py  literature.py  mechanism.py  model_clinical_trials_agent.py  orchestrator.py  safety.py
src/indication_scout/api/: __init__.py  main.py
src/indication_scout/cli/: cli.py
src/indication_scout/data/: __init__.py  opentargets.py
src/indication_scout/data_sources/: __init__.py  base_client.py  chembl.py  clinical_trials.py  clinicaltrials_gov.py  drugbank.py  fda.py  literature_index.py  open_targets.py  pubmed.py
src/indication_scout/helpers/: drug_helpers.py
src/indication_scout/ml/: __init__.py  inference.py
src/indication_scout/models/: __init__.py  disease.py  drug.py  evidence.py  indication.py  mechanism.py  model_chembl.py  model_clinical_trials.py  model_drug_profile.py  model_evidence_summary.py  model_fda.py  model_open_targets.py  report.py  (+4 more)
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_base_client.py  test_chembl.py  test_clinical_trials.py  test_fda.py  test_llm.py  test_open_target_accessors.py  test_open_targets.py  test_opentargets.py  test_pubmed.py  test_pubmed_query.py  test_retrieval.py
tests/unit/: test_base_client.py  test_chembl.py  test_clinical_trials_helpers.py  test_clinical_trials_models.py  test_db.py  test_fda.py  test_markers.py  test_models.py  test_open_targets_client.py  test_open_targets_models.py  test_pubmed.py  test_pubmed_db.py  test_pubmed_helpers.py  test_pubmed_models.py
(+125 files in other folders)
